crates/vouched/tests/ui/vouched/impls_empty.rs
use vouched::Vouched;

#[derive(Vouched)]
#[vouched(impls())]
struct EmptyImpls(i32);

fn main() {}
